Fix mobile animations leaving empty white space

--- a/envira-app/src/styles.css
+++ b/envira-app/src/styles.css
@@ -13,7 +13,7 @@
 *{
     margin:0;
     padding: 0;
-    font-family: sfpro-reg
+    font-family: sfpro-reg;
 }
 
 :root { /* colors */
@@ -197,6 +197,8 @@ button:hover::after{
     width: 100%;
     height:70%;
     margin: 0 7vw 0vh 0vw;
+    overflow-x: hidden;
+
 }
 .bg-img1-woman{
     height: 100%;
